# gravity-bridge

./: Makefile  go.mod  go.sum  readme.md
integration_tests/: keys.go  (+7 more)
orchestrator/: Cargo.toml  config.toml
orchestrator/client/: Cargo.toml
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: build.rs  crypto.rs  query.rs  send.rs
orchestrator/ethereum_gravity/: Cargo.toml
orchestrator/ethereum_gravity/src/: deploy_erc20.rs  erc20_utils.rs  logic_call.rs  send_to_cosmos.rs  submit_batch.rs  utils.rs  valset_update.rs
orchestrator/gorc/: Cargo.toml
orchestrator/gorc/src/: application.rs  config.rs
orchestrator/gorc/src/commands/: cosmos_to_eth.rs  print_config.rs  sign_delegate_keys.rs
orchestrator/gorc/tests/: acceptance.rs
orchestrator/gravity_abi/: Gravity.json
orchestrator/gravity_abi/src/: erc20.rs  gravity.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: error.rs  ethereum.rs  message_signatures.rs
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  get_with_retry.rs  main.rs  main_loop.rs  oracle_resync.rs
orchestrator/register_delegate_keys/: Cargo.toml
orchestrator/relayer/: Cargo.toml  token_addresses.json.example
orchestrator/relayer/src/: batch_relaying.rs  fee_manager.rs  find_latest_valset.rs  logic_call_relaying.rs  main.rs  main_loop.rs  valset_relaying.rs
orchestrator/test_runner/: Cargo.toml
orchestrator/test_runner/src/: happy_path.rs  happy_path_v2.rs  main.rs  orch_keys_update.rs  transaction_stress_test.rs  utils.rs
(+85 files in other folders)
