# This is no longer a virtual manifest as it used to be.
# Also, the name was changed from orchestrator to gravity_bridge.
[package]
name = "gravity_bridge"
version = "0.1.0"
authors = ["PeggyJV"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
description = """

"""

[workspace]
default-members = ["gorc", "orchestrator", "test_runner"]
members = [
	"orchestrator",
	"cosmos_gravity",
	"ethereum_gravity",
	"gravity_utils",
	"proto_build",
	"test_runner",
	"gravity_proto",
	"relayer",
	"client",
	"register_delegate_keys",
	"gorc",
]

[patch.crates-io]
deep_space = { git = "https://github.com/yihuang/deep_space/", branch = "ethermint" }
